Tue Jun 20 14:10:26 1995  Tom Yu  (tlyu@dragons-lair)

	* externs.h: NO_STRING_H -> HAVE_STRING_H

	* configure.in: add test for string.h

Fri Jun 16 09:18:42 1995  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: "install::" to shut up gmake


Thu Jun 15 17:41:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it was not used.
	* configure.in - Remove dbm library checks, these are no longer needed
		with the Berkeley database code.  Also, add shared library
		usage check.

Fri Jun  9 18:29:49 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 24 10:00:38 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ring.c: Include string.h or strings.h

	* configure.in: Check for stdlib.h

	* externs.h: Include sys/param.h before redefining BSD
	            Include stdlib.h or define malloc, realloc, calloc

Fri Apr 28 18:07:03 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (KLIB): put KRB4_LIB inside KLIB.

Thu Apr 27 13:56:12 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (telnet): use KRB4_LIB directly.
	* configure.in: use WITH_KRB4 as-is.

Fri Apr 21 12:45:40 1995  Mark Eichin  <eichin@cygnus.com>

	* main.c (main): Handle -k if KRB5 is defined. (from ian@cygnus.com)

Wed Mar 29 15:39:02 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Add dependency for libtelnet.a

Tue Mar  7 19:59:07 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_INCLUDE.

Thu Mar  2 12:30:14 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:25:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE and ISODE_DEFS, replace check
		for -lsocket and -lnsl with WITH_NETLIB check.

Tue Feb 28 13:28:02 1995  Theodore Y. Ts'o  <tytso@dcl>
