@@ -1,3 +1,9 @@
+Sun Jul  2 04:19:48 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>
+
+	* commands.c: rename setmode() and clearmode() to tel_setmode()
+		and tel_clearmode() to avoid conflicts with setmode()
+		defined in NetBSD unistd.h
+
 Tue Jun 20 14:10:26 1995  Tom Yu  (tlyu@dragons-lair)
 
 	* externs.h: NO_STRING_H -> HAVE_STRING_H
